Fixes and Enhancements

--- a/Azure/index.html
+++ b/Azure/index.html
@@ -13,6 +13,7 @@
     <link href="assets/css/blade.css" type="text/css" rel="stylesheet">
     <link href="assets/css/images.css" type="text/css" rel="stylesheet">
     <link href="assets/css/metro-bootstrap.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/jquery.gridster.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -28,7 +29,7 @@
     <script src="scripts/angular-route.js"></script>
     <script src="scripts/angular-sanitize.js"></script>
     <script src="scripts/metro-core.js"></script>
-    
+    <script src="scripts/jquery.gridster.js"></script>
     <!-- Bootstrapping -->
     <script src="app/app.js"></script>
     <script src="app/config.js"></script>
@@ -43,6 +44,8 @@
     <script src="app/layout/sidebar/settingsHub.js"></script>
     <script src="app/layout/blade/blade.js"></script>
     <script src="app/layout/blade/blade-container.js"></script>
+    <script src="app/layout/blade/blade-handler.js"></script>
+    <script src="app/dashboard/dashboard.js"></script>
 </body>
 
 </html>
